removed unnecessary links and a file

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark menu">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand">
       <img src="images/netsoc.png" width = "69" height = "64.6" alt="Netsoc Logo Image">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,15 +37,14 @@
           <div class="row">
               <div class="col-md-6 intros">
                   <h1 class="display-2">
-                      <span class="display-2--intro">netsoc r/place</span>
+                      <span class="display-2--intro">netsoc Pixel-Art</span>
                       <span class="display-2--description">
-                          The concept of r/place involves placing tiles to create a picture.
-                          Unlike reddit we haven't placed a time limit on placing tiles!
+                          Inspired by the concept of r/place we have decided to make Pixel Art!
                       </span>
                   </h1>
                   <span class="display-2--login">
                       <a href="/users/login">
-                          <button type="button" class="btn btn-primary btn-large btn-main">Login</button>
+                          <button type="button" class="btn btn-primary btn-large btn-main">Play</button>
                       </a>
                   </span>
               </div>
