App ready for deployment

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>netsoc: r/place</title>
+        <title>Pixel Art</title>
     </head>
 <body style="background-color: #343a40">
     <%- body %>
