added admin creation

--- a/views/users/contribute.ejs
+++ b/views/users/contribute.ejs
@@ -44,7 +44,7 @@
                             Feel free to pull.
                         </span>
                         <span class="display-2--contribute">
-                            <button type="button" class="btn btn-primary btn-large btn-main--login">Github</button>
+                            <a href="https://github.com/mockmez/Netsoc-project"><button type="button" class="btn btn-primary btn-large btn-main--login">Github</button></a>
                         </span>
                     </h1>
                     <br><br>
